--- a/Dockerfile.jinja
+++ b/Dockerfile.jinja
@@ -20,13 +20,17 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 
 # Copy app to runtime stage
 FROM python:3.12.8-slim-bookworm
+WORKDIR /app
 
 # Copy the application from the builder
 RUN useradd -r -U app
 COPY --from=builder --chown=app:app /app /app
+{% for instruction in instructions.post_build %}
+{{ instruction }}
+{% endfor %}
 
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
 
 USER app
-CMD ["{{ main_cmd }}"]
+CMD ["{{ cmd }}"]
