fix: remove custom user usage

--- a/Dockerfile.jinja
+++ b/Dockerfile.jinja
@@ -22,15 +22,17 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 FROM python:3.12.8-slim-bookworm
 WORKDIR /app
 
-# Copy the application from the builder
-RUN useradd -r -U app
-COPY --from=builder --chown=app:app /app /app
+COPY --from=builder /app /app
+
+{% if instructions.post_build -%}
+# post_build instructions
 {% for instruction in instructions.post_build %}
 {{ instruction }}
 {% endfor %}
 
+{% endif -%}
+
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
 
-USER app
 CMD ["{{ cmd }}"]
